lan thu 2 commit tai master

--- a/nav.html
+++ b/nav.html
@@ -12,8 +12,18 @@
    <ul>
       <li><a href="">THƯƠNG HIỆU</a>
         <ul class="menu">
-            <li><a href="">Orient</a></li>
-            <li><a href="">G-Shock & Baby-G</a></li>
+            <li><a href="">Orient</a>
+            <ul class="mini-menu">
+              <li><a href="">1</a></li>
+              <li><a href="">2</a></li>
+              <li><a href="">3</a></li>
+            </ul>
+            </li>
+            <li><a href="">G-Shock & Baby-G</a><ul class="mini-menu">
+              <li><a href="">4</a></li>
+              <li><a href="">5</a></li>
+              <li><a href="">6</a></li>
+            </ul></li>
             <li><a href="">Fossil</a></li>
             <li><a href="">Casio</a></li>
             <li><a href="">Citizen</a></li>
